# advent-of-code

./: .gitignore  README.md
2024/rust/: Cargo.toml  justfile
2024/rust/daily-template/: Cargo.toml
2024/rust/daily-template/src/: part1.rs  part2.rs
2024/rust/day-01/: Cargo.toml
2024/rust/day-01/src/: part1.rs  part2.rs
2024/rust/day-02/: Cargo.toml
2024/rust/day-02/src/: part1.rs  part2.rs
2024/rust/day-03/: Cargo.toml
2024/rust/day-03/src/: part1.rs  part2.rs
2024/rust/day-04/: Cargo.toml
2024/rust/day-04/src/: part1.rs  part2.rs
2024/rust/scripts/: get-aoc-input.rs
